# Lekhaly

./: .editorconfig  .env  .env.example  .gitignore  ALL_66_FILES_TRANSFORMATION_GUIDE.md  BATCH_CREATE_66_DESKTOP_PAGES.md  DESKTOP_PAGE_TRANSFORMS_COMPLETE.md  LICENSE  README.md  WEB_PAGE_TSX_FILES_COMPLETE.md  batch_create_pages.ps1  check_db.js  fix_desktop_router.ps1  fix_items.js  fix_links.ps1  fix_router_links.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  search_stock_summary.ps1  sync_components.ps1  sync_pages.ps1  sync_web_to_desktop.ps1  test_api.js  tsconfig.base.json  turbo.json
.git-rewrite/: backup-refs  commit  index  message  parse  revs
.git-rewrite/t/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.turbo/daemon/: 5091fd7fcafe675c-turbo.log.2026-01-24  5091fd7fcafe675c-turbo.log.2026-01-28  5091fd7fcafe675c-turbo.log.2026-01-29
apps/api/: API_OVERVIEW.md  README.md  check_db.js  debug_auth.ts  debug_conn.ts  debug_imports.ts  find_company.ts  force_migrate.js  manual_migrate.js  migrate_to_fiscal_sessions.ts  openapi.yaml  package.json  prisma.config.ts  repair_party_ledger.ts  reproduce_request.ps1  test_argon2.js  update_current_company.ts
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: install_radix.bat  (+4 more)
docs/: IMPLEMENTATION_SUMMARY.md  run.md
scripts/: copy-desktop-views.ps1  fix-icon.mjs  get-logo.mjs  migrate-ui-imports.mjs
(+826 files in other folders)
