[package]
name = "lekhaly-desktop"
version = "0.1.0"
description = "Lekhaly Professional Accounting Desktop App"
authors = ["Lekhaly"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
